--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "modals",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Sasor1man.github.io/modals",
+  "homepage": "https://sasor1man.github.io/modals",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
