--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "antd": "^5.27.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
-    "typescript": "^5.9.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "typescript": "^4.9.5"
   }
 }
