--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "antd": "^5.27.1",
+    "mobx": "^6.13.7",
+    "mobx-react": "^9.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
